--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>TEXAS Teams</title>
+        <title>มาสไรเดอร์ TEXAS</title>
         <link rel="stylesheet" href="design.css">
     </head>
     <body>
-        <h1>R I P TEXAS</h1>
+        <h1>Masked Rider TEXAS</h1>
         <h1>Boss</h1>
 
         <!-- First Card -->
